# shnng

./: README.md  main.py  package-lock.json  package.json  tslint.json
angular/angular-base/: package-lock.json  tslint.json
angular/angular-base/e2e/: app.po.ts
angular/angular-base/src/: index.html  main.ts
backend/Makefiles/: npm.utils.Makefile  poetry.Makefile
backend/ml-api/: Makefile  dev-requirements.txt
backend/webserver/: .eslintrc.js  Makefile  package-lock.json  package.json
backend/webserver/src/: applicationSettings.ts  index.ts
camera-transform/: .gitignore  virtual_webcam_writer.py
camera-transform/filters/: canny_filter.py  cartoon_filter.py  image_filter.py
e2e/: app.e2e-spec.ts
filters/: canny_filter.py  cartoon_filter.py  image_filter.py
generic-python-app/: docker-compose.yaml
generic-python-app/backend/Makefiles/: node.lint.Makefile  python.fastapi.Makefile  python.lint.Makefile  python.tests.Makefile
generic-python-app/backend/ml-api/: .gitignore  Dockerfile  pyproject.toml
generic-python-app/backend/ml-api/app/: app.py  run.py
generic-python-app/backend/ml-api/app/routers/emotion_detection/: router.py
generic-python-app/backend/ml-api/app/tests/: test_settings.py
generic-python-app/backend/webserver/: .dockerignore  .env.example  Dockerfile  Makefile  (+3 more)
requirements/: dev.requirements.in  requirements.in  testing.requirements.in
src/: styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.spec.ts  app.component.ts  app.module.ts  dashboard.component.ts  definitions.ts  h.service.spec.ts  h.service.ts  issue.component.spec.ts  issue.component.ts  links.ts  material.component.ts  my-material.module.ts  position-extractor.directive.spec.ts  simple-http-service.service.spec.ts
src/template_mlops_project/: something.py
template_mlops_project_v0/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
template_mlops_project_v0/notebooks/: TestImports.ipynb
template_mlops_project_v0/requirements/: beauty.requirements.txt  data-science.requirements.txt  dev.requirements.txt  local.requirements.in  local.requirements.txt  requirements.txt  security.requirements.txt  testing.requirements.txt
template_mlops_project_v0/src/template_mlops_project/: settings.py
(+44 files in other folders)
