[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = "A sample ML REST API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
pytest-asyncio = "^0.18.2"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
isort = "^5.10.1"
black = "^22.1.0"
requests = "^2.27.1"

[tool.isort]
profile = "black"
include_trailing_comma = "true"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit=["app/tests/*", "*/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
